--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,8 @@
 #Grails Metadata file
-#Mon Feb 27 15:37:50 CET 2012
+#Fri Mar 09 10:42:17 CET 2012
 app.grails.version=2.0.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
+plugins.db-reverse-engineer=0.4
+plugins.spring-security-core=1.2.7.2
