--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Fri Mar 09 10:42:17 CET 2012
+#Mon Apr 02 09:12:18 CEST 2012
 app.grails.version=2.0.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.db-reverse-engineer=0.4
+plugins.hibernate-filter=0.3.1
 plugins.spring-security-core=1.2.7.2
