--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Thu Apr 05 15:44:39 CEST 2012
+#Wed Apr 18 15:45:54 CEST 2012
 app.grails.version=2.0.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.db-reverse-engineer=0.4
+plugins.hibernate-filter=0.3.1
 plugins.spring-security-core=1.2.7.2
