--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Thu Apr 19 11:57:04 CEST 2012
+#Mon Apr 23 14:48:26 CEST 2012
 app.grails.version=2.0.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.db-reverse-engineer=0.4
+plugins.hibernate-filter=0.3.1
 plugins.spring-security-core=1.2.7.2
