--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Tue Apr 24 16:39:56 CEST 2012
+#Tue May 01 10:13:34 CEST 2012
 app.grails.version=2.0.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.db-reverse-engineer=0.4
 plugins.hibernate-filter=0.3.1
+plugins.jquery-ui=1.8.15
 plugins.spring-security-core=1.2.7.3
