--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,11 @@
 #Grails Metadata file
-#Mon May 07 16:24:12 CEST 2012
+#Wed Jun 06 11:59:38 CEST 2012
 app.grails.version=2.0.3
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.db-reverse-engineer=0.4
 plugins.hibernate-filter=0.3.1
+plugins.mail=1.0
+plugins.quartz=1.0-RC2
 plugins.spring-security-core=1.2.7.3
