--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,9 @@
 #Grails Metadata file
-#Sun Sep 30 11:25:06 CEST 2012
-app.grails.version=2.0.3
+#Thu Nov 08 18:42:59 CET 2012
+app.grails.version=2.1.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
-plugins.db-reverse-engineer=0.4
 plugins.hibernate-filter=0.3.2
 plugins.mail=1.0
 plugins.quartz=1.0-RC2
