#190: Request copy of student ID implemented

--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,10 @@
 #Grails Metadata file
-#Wed Feb 20 10:09:39 CET 2013
+#Fri Apr 12 10:35:12 CEST 2013
 app.grails.version=2.2.0
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
 plugins.hibernate-filter=0.3.2
 plugins.mail=1.0.1
-plugins.quartz=1.0-RC2
+plugins.quartz2=2.1.6.2
 plugins.spring-security-core=1.2.7.3
