--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,45 @@
-*.iws
-*.iml
-*.ipr
-*.class
+# .gitignore for Grails 1.2 and 1.3
+
+# web application files
+/web-app/WEB-INF
+
+# IDE support files
+/.classpath
+/.launch
+/.project
+/.settings
+/*.launch
+/*.tmproj
+/ivy*
+/eclipse
+/classes
+
+# default HSQL database files for production mode
+/prodDb.*
+
+# general HSQL database files
 *Db.properties
 *Db.script
-.settings
-.idea
-.project
-.classpath
-eclipse
-stacktrace.log
-target
-/classes
+
+# logs
+/stacktrace.log
+/test/reports
+/logs
+
+# project release file
+/*.war
+
+# plugin release file
+/*.zip
+
+# older plugin install locations
 /plugins
 /web-app/plugins
 /web-app/WEB-INF/classes
-atlassian-ide-plugin.xml
+
+# "temporary" build files
+/target
+
+# other
+*.iws
+
