--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Apr 12 10:35:12 CEST 2013
-app.grails.version=2.2.0
+#Sun Dec 01 10:55:20 CET 2013
+app.grails.version=2.3.1
 app.name=Conference-application
 app.servlet.version=2.5
 app.version=0.1
