--- a/src/templates/war/web.xml
+++ b/src/templates/war/web.xml
@@ -17,48 +17,52 @@
         <param-value>@grails.project.key@</param-value>
     </context-param>
 
-    <filter>
-        <filter-name>sitemesh</filter-name>
-        <filter-class>org.codehaus.groovy.grails.web.sitemesh.GrailsPageFilter</filter-class>
-    </filter>
+   <filter>
+       <filter-name>sitemesh</filter-name>
+       <filter-class>org.codehaus.groovy.grails.web.sitemesh.GrailsPageFilter</filter-class>
+   </filter>
 
-    <filter>
-        <filter-name>charEncodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <init-param>
-            <param-name>targetBeanName</param-name>
-            <param-value>characterEncodingFilter</param-value>
-        </init-param>
-        <init-param>
-            <param-name>targetFilterLifecycle</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </filter>
+   <filter>
+       <filter-name>charEncodingFilter</filter-name>
+       <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+       <init-param>
+           <param-name>targetBeanName</param-name>
+           <param-value>characterEncodingFilter</param-value>
+       </init-param>
+       <init-param>
+           <param-name>targetFilterLifecycle</param-name>
+           <param-value>true</param-value>
+       </init-param>
+   </filter>
 
-    <filter-mapping>
-        <filter-name>charEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+   <filter-mapping>
+       <filter-name>charEncodingFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+   </filter-mapping>
 
-    <filter-mapping>
-        <filter-name>sitemesh</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
+   <filter-mapping>
+       <filter-name>sitemesh</filter-name>
+       <url-pattern>/*</url-pattern>
+       <dispatcher>REQUEST</dispatcher>
+       <dispatcher>ERROR</dispatcher>
+   </filter-mapping>
 
-    <listener>
-        <listener-class>org.codehaus.groovy.grails.web.context.GrailsContextLoaderListener</listener-class>
-    </listener>
+   <listener>
+       <listener-class>org.codehaus.groovy.grails.web.context.GrailsContextLoaderListener</listener-class>
+   </listener>
 
-    <!-- Grails dispatcher servlet -->
+   <!-- Grails dispatcher servlet -->
     <servlet>
         <servlet-name>grails</servlet-name>
         <servlet-class>org.codehaus.groovy.grails.web.servlet.GrailsDispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>dispatchOptionsRequest</param-name>
+            <param-value>true</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- The Groovy Server Page servlet -->
+    <!-- The Groovy Server Pages servlet -->
     <servlet>
         <servlet-name>gsp</servlet-name>
         <servlet-class>org.codehaus.groovy.grails.web.pages.GroovyPagesServlet</servlet-class>
@@ -69,6 +73,11 @@
         <url-pattern>*.gsp</url-pattern>
     </servlet-mapping>
 
+    <session-config>
+        <!-- 30 minutes -->
+        <session-timeout>30</session-timeout>
+    </session-config>
+
     <welcome-file-list>
         <!--
         The order of the welcome pages is important.  JBoss deployment will
@@ -78,24 +87,5 @@
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.gsp</welcome-file>
     </welcome-file-list>
-
-    <jsp-config>
-        <taglib>
-            <taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
-            <taglib-location>/WEB-INF/tld/c.tld</taglib-location>
-        </taglib>
-        <taglib>
-            <taglib-uri>http://java.sun.com/jsp/jstl/fmt</taglib-uri>
-            <taglib-location>/WEB-INF/tld/fmt.tld</taglib-location>
-        </taglib>
-        <taglib>
-            <taglib-uri>http://www.springframework.org/tags</taglib-uri>
-            <taglib-location>/WEB-INF/tld/spring.tld</taglib-location>
-        </taglib>
-        <taglib>
-            <taglib-uri>http://grails.codehaus.org/tags</taglib-uri>
-            <taglib-location>/WEB-INF/tld/grails.tld</taglib-location>
-        </taglib>
-    </jsp-config>
 
 </web-app>
