--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Wed Jun 01 13:35:27 CEST 2016
-app.grails.version=2.5.4
+#Thu Dec 07 15:53:53 CET 2017
+app.grails.version=2.5.6
 app.name=conference
 app.servlet.version=3.0
 app.version=1.0
